--- a/loss_predictions.html
+++ b/loss_predictions.html
@@ -203,7 +203,7 @@
 
 <!-- CHART -->
 <div class="mt-6 grid grid-cols-12 gap-4">
-  <section class="col-span-12 rounded-2xl border border-slate-200 bg-white shadow-sm p-4 h-[24rem]">
+  <section class="col-span-12 rounded-2xl border border-slate-200 bg-white shadow-sm p-4 h-64 md:h-[24rem]">
     <div class="flex items-center justify-between mb-2">
       <h3 class="text-lg font-semibold text-slate-800">Material Loss Per Stage</h3>
       <div class="flex items-center gap-3 text-xs text-slate-500">
