--- a/loss_predictions.html
+++ b/loss_predictions.html
@@ -36,9 +36,12 @@
 
 <body class="h-screen flex flex-col bg-slate-50 text-slate-800 font-sans">
   <!-- HEADER -->
-  <header class="bg-gradient-to-r from-pbGrayLight via-slate-400/50 to-pbBlue">
+  <header class="bg-gradient-to-r from-pbGrayLight via-pbGrayMid/80 to-pbBlue">
     <div class="relative w-full py-5 pl-3 flex items-center">
-      <img src="assets/images/logo_portobello_america_CORES_pantone_655.png" alt="Portobello America" class="h-16 w-auto object-contain block" />
+      <a href="http://127.0.0.1:5500/loss_predictions.html" class="shrink-0">
+
+        <img src="assets/images/logo_portobello_america_CORES_pantone_655.png" alt="Portobello America" class="h-16 w-auto object-contain block" />
+      </a>
       <h1 class="absolute left-1/2 -translate-x-1/2 text-white text-xl md:text-2xl lg:text-4xl font-semibold tracking-tight text-center pointer-events-none">
         Tile Material Dashboard
       </h1>
