--- a/model_performance.html
+++ b/model_performance.html
@@ -35,7 +35,8 @@
   <!-- HEADER -->
   <header class="bg-gradient-to-r from-pbGrayLight via-pbGrayMid/80 to-pbBlue">
     <div class="relative w-full py-5 pl-3 flex items-center">
-      <a href="/" class="shrink-0">
+      <a href="http://127.0.0.1:5500/loss_predictions.html" class="shrink-0">
+
         <img src="assets/images/logo_portobello_america_CORES_pantone_655.png" alt="Portobello America" class="h-16 w-auto object-contain block" />
       </a>
       <h1 class="absolute left-1/2 -translate-x-1/2 text-white text-xl md:text-2xl lg:text-4xl font-semibold tracking-tight text-center pointer-events-none">
