--- a/tables.html
+++ b/tables.html
@@ -34,7 +34,8 @@
   <header class="bg-gradient-to-r from-pbGrayLight via-pbGrayMid/80 to-pbBlue">
     <div class="relative w-full py-5 pl-3 flex items-center">
       <!-- Left: Logo with tiny left padding -->
-      <a href="/" class="shrink-0">
+      <a href="http://127.0.0.1:5500/loss_predictions.html" class="shrink-0">
+
         <img
           src="assets/images/logo_portobello_america_CORES_pantone_655.png"
           alt="Portobello America"
